# rust-frp-editor

./: Cargo.toml  README.md  editor-test.txt
src/: document.rs  editor.rs  lib.rs  main.rs  position.rs  prompt.rs  row.rs  status_line.rs  status_message.rs  terminal.rs  utils.rs
src/editor/: document.rs  editor.rs  mod.rs
src/frp_editor/: document.rs  editor.rs  keyboard.rs  mod.rs  position.rs  printer.rs  row.rs  terminal.rs
src/status_line/: components.rs
